--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,32 @@
 }
 
 .navbar-brand {
-    font: size 1.4rem;
+    font-size: 1.4rem;
     color: #e3f2fd !important;
 }
 
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+}
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
 body {
+    position: relative;
+    margin: 0;
+    min-height: 100%;
     background: whitesmoke;
+}
+
+.border {
+    border-width: 3px !important;
 }
