--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Audiowide|Montserrat:300,400,500,600&display=swap');
 .navbar {
-    background: #90a4ae;
+    background: #4A148C !important;
+}
+
+.navbar a:not(.dropdown-item):not(.navbar-brand) {
+    color: hsla(0, 0%, 80%, 0.75) !important;
+    font-weight: 500;
+}
+
+.navbar .nav-item.active a:not(.dropdown-item) {
+    color: hsla(0, 0%, 95%, 1) !important;
 }
 
 .navbar-brand {
-    font-size: 1.4rem;
-    color: #e3f2fd !important;
+    font-size: 1.8rem;
+    color: whitesmoke !important;
+    font-family: 'Audiowide', cursive;
+    letter-spacing: .3rem;
 }
 
 .footer {
@@ -15,6 +27,7 @@
     padding: 1rem;
     background-color: #efefef;
     text-align: center;
+    border-top: 2px solid #CFD8DC;
 }
 
 html {
@@ -27,8 +40,20 @@ body {
     margin: 0;
     min-height: 100%;
     background: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    color: #424242;
 }
 
 .border {
     border-width: 3px !important;
+    border-color: #AA00FF !important;
+}
+
+h5 {
+    font-size: 2rem !important;
+    font-weight: 600;
+}
+
+h4 {
+    color: #424242;
 }
